# meal-planning

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
data/: meals.json.backup
data/default/: contexts.json  dishes.json  ingredients.json  plans.json  shortlist.json
devops/: README.md  todo.md
devops/cloud/: 01-setup-project.sh  02-manual-deploy.sh  03-setup-domain.sh  config.env
devops/docker/: Dockerfile.dash-app  entrypoint.dash-app.sh
devops/scripts/: dev.sh
meal_planning/: app.py  theme.py
meal_planning/ai/: agent.py  prompts.py
meal_planning/ai/domain/: context.py
meal_planning/ai/repositories/: json_repos.py  protocols.py
meal_planning/ai/tools/: analysis_tools.py  catalogue_tools.py  planning_tools.py
meal_planning/api/: __init__.py
meal_planning/api/cli/: __init__.py  main.py
meal_planning/api/dash/: README.md  __init__.py  app.py  callbacks.py  components.py
meal_planning/api/web/: app.py
meal_planning/app/: bootstrap.py  store.py
meal_planning/cli/: main.py
meal_planning/copy/: __init__.py  app_about.md  app_get_started.md  app_header.md  report_copy.py
meal_planning/core/: __init__.py
meal_planning/docs/: blobstore101.md  brand-guidelines.md
meal_planning/infra/: __init__.py
meal_planning/infra/ai/: prompts.py  (+2 more)
meal_planning/services/: __init__.py  ai_assistant.py  analysis.py  catalogue.py  context.py  planning.py  shopping.py
scratch/20260100-Planning/: 20260100-menu.md  20260100-shopping.md  guidelines.md
scratch/Menu Bank/: dishes.py
scratch/app-design/: design-instructinos.md
(+42 files in other folders)
