[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meal-planning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.36.1",
    "pydantic>=2.12.5",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "plotly[express]>=5.0.0",
    "pandas>=2.0.0",
    "dash>=2.18.0",
    "dash-mantine-components>=0.14.0",
    "dash-ag-grid>=31.0.0",
    "dash-iconify>=0.1.2",
    "gunicorn>=21.0.0",
]

[project.scripts]
meal = "meal_planning.api.cli.main:main"
